--- a/Sources/App/Modules/Blog/Templates/Admin/Posts/Edit.html
+++ b/Sources/App/Modules/Blog/Templates/Admin/Posts/Edit.html
@@ -13,7 +13,7 @@
     #(field = ["id": "excerpt", "size": "small", "data": edit.excerpt])
     #inline("Admin/Fields/Textarea")
 
-    #(field = ["id": "image", "data": edit.image])
+    #(field = ["id": "image", "class": "large", "data": edit.image])
     #inline("Admin/Fields/File")
 
     #(field = ["id": "content", "size": "large", "data": edit.content])
