--- a/Sources/App/Modules/Admin/Templates/Fields/File.html
+++ b/Sources/App/Modules/Admin/Templates/Fields/File.html
@@ -1,8 +1,8 @@
-<section class="m:bottom #(field.class ?? "")">
+<section class="m:bottom #(field.class ?? "large")-uploader uploader">
     <label for="#(field.id)">#(field.label ?? field.id.capitalized())</label>
     <div id="image-uploader" class="image-uploader">
         #if(field.data.value != ""):
-            <img id="uploaded-image" src="#(field.data.value.resolve())">
+            <img id="uploaded-image" src="#(field.data.value.resolve() ?? "")">
         #endif
         <a id="choose-button" href="javascript:void(0);" onclick="chooseImage();">Choose</a>
         <a id="remove-button" href="javascript:void(0);" onclick="removeImage()">Remove</a>
