--- a/Sources/App/Modules/Blog/Templates/Admin/Authors/Edit.html
+++ b/Sources/App/Modules/Blog/Templates/Admin/Authors/Edit.html
@@ -12,7 +12,7 @@
 #define(fields):
     #var(field = nil)
 
-    #(field = ["id": "image", "class": "rounded-image-uploader", "data": edit.image])
+    #(field = ["id": "image", "class": "circular", "data": edit.image])
     #inline("Admin/Fields/File")
 
     #(field = ["id": "name", "required": true, "data": edit.name])
