--- a/Sources/App/Modules/Blog/Templates/Admin/Categories/Edit.html
+++ b/Sources/App/Modules/Blog/Templates/Admin/Categories/Edit.html
@@ -7,7 +7,7 @@
 #define(fields):
     #var(field = nil)
 
-    #(field = ["id": "image", "class": "square-image-uploader", "data": edit.image])
+    #(field = ["id": "image", "class": "small", "data": edit.image])
     #inline("Admin/Fields/File")
 
     #(field = ["id": "title", "required": true, "data": edit.title])
