--- a/Sources/App/Modules/Blog/Templates/Admin/Categories/List.html
+++ b/Sources/App/Modules/Blog/Templates/Admin/Categories/List.html
@@ -1,28 +1,48 @@
 #define(css):
+tr {
+    grid-template-columns: 1fr 1fr;
+}
+@media (max-width: 599px) {
+    th:nth-of-type(1), th:nth-of-type(4), th:nth-of-type(5) {
+        display: none;
+    }
+    th:nth-of-type(2), th:nth-of-type(3), td:nth-of-type(1), td:nth-of-type(2), td:nth-of-type(3)  {
+        grid-column: span 2;
+    }
+    td:nth-of-type(3) {
+        padding-bottom: 16px;
+        margin-bottom: 16px;
+        border-bottom: 1px solid #e9e9e9;
+    }
+    @media (prefers-color-scheme: dark) {
+        td:nth-of-type(3) {
+            border-bottom: 1px solid #232323;
+        }
+    }
+}
 @media (min-width: 600px) {
-    .table .th, .table .tr {
-        grid-template-columns: 96px 1fr 128px 64px 96px;
+    tr {
+        grid-template-columns: 64px 1fr 128px 64px 96px;
     }
 }
 #enddefine
 #define(th):
     #var(link = nil)
-    <div class="td td:center">Image</div>
-    <div class="td td:left">#(link = ["key": "title", "default": true])#inline("Admin/SortLink")</div>
-    <div class="td td:center">#(link = ["key": "priority"])#inline("Admin/SortLink")</div>
-    <div class="td td:center">Edit</div>
-    <div class="td td:center">Delete</div>
+    <th class="t:center">Image</th>
+    <th class="t:left m:horizontal:s">#(link = ["key": "title", "default": true])#inline("Admin/SortLink")</th>
+    <th class="t:center">#(link = ["key": "priority"])#inline("Admin/SortLink")</th>
+    #inline("Admin/TableActionLabels")
 #enddefine
 #define(tr):
     #for(item in list.items):
-<div class="tr">
-    <div class="td td:center">
+<tr>
+    <td class="t:center">
         <a href="#($req.url.path)#(item.id)/"><img class="w64 br:s" src="#(item.imageKey.resolve())" alt="#(item.title)"></a>
-    </div>
-    <div class="td td:left"><a href="#($req.url.path)#(item.id)/">#(item.title)</a></div>
-    <div class="td td:center"><a href="#($req.url.path)#(item.id)/">#(item.priority)</a></div>
-    #inline("Admin/Actions")
-</div>
+    </td>
+    <td class="t:left m:horizontal:s"><a href="#($req.url.path)#(item.id)/">#(item.title)</a></td>
+    <td class="t:center"><a href="#($req.url.path)#(item.id)/">#(item.priority)</a></td>
+    #inline("Admin/TableActionButtons")
+</tr>
     #endfor
 #enddefine
 #let(title = "Categories")
