--- a/Sources/App/Modules/Blog/Templates/Admin/Links/List.html
+++ b/Sources/App/Modules/Blog/Templates/Admin/Links/List.html
@@ -1,30 +1,49 @@
 #define(css):
+tr {
+    grid-template-columns: 1fr 1fr;
+}
+@media (max-width: 599px) {
+    th:nth-of-type(4), th:nth-of-type(5) {
+        display: none;
+    }
+    th:nth-of-type(1), th:nth-of-type(2), th:nth-of-type(3), td:nth-of-type(1), td:nth-of-type(2), td:nth-of-type(3)  {
+        grid-column: span 2;
+    }
+    td:nth-of-type(3) {
+        padding-bottom: 16px;
+        margin-bottom: 16px;
+        border-bottom: 1px solid #e9e9e9;
+    }
+    @media (prefers-color-scheme: dark) {
+        td:nth-of-type(3) {
+            border-bottom: 1px solid #232323;
+        }
+    }
+}
 @media (min-width: 600px) {
-    .table .th, .table .tr {
+    tr {
         grid-template-columns: 1fr 1fr 128px 64px 96px;
     }
 }
 #enddefine
 #define(toolbarRight):
-
     <a href="/admin/blog/authors/#Request(parameter: "id")/">#svg("link")</a>
 #enddefine
 #define(th):
     #var(link = nil)
-    <div class="td td:left m:horizontal:s">#(link = ["key": "name", "default": true])#inline("Admin/SortLink")</div>
-    <div class="td td:left">#(link = ["key": "url"])#inline("Admin/SortLink")</div>
-    <div class="td td:center">#(link = ["key": "priority"])#inline("Admin/SortLink")</div>
-    <div class="td td:center">Edit</div>
-    <div class="td td:center">Delete</div>
+    <th class="t:left m:horizontal:s">#(link = ["key": "name", "default": true])#inline("Admin/SortLink")</th>
+    <th class="t:left">#(link = ["key": "url"])#inline("Admin/SortLink")</th>
+    <th class="t:center">#(link = ["key": "priority"])#inline("Admin/SortLink")</th>
+    #inline("Admin/TableActionLabels")
 #enddefine
 #define(tr):
     #for(item in list.items):
-<div class="tr">
-    <div class="td td:left m:horizontal:s"><a href="#($req.url.path)#(item.id)/">#(item.name)</a></div>
-    <div class="td td:left"><a href="#($req.url.path)#(item.id)/">#(item.url)</a></div>
-    <div class="td td:center"><a href="#($req.url.path)#(item.id)/">#(item.priority)</a></div>
-    #inline("Admin/Actions")
-</div>
+<tr>
+    <td class="t:left m:horizontal:s"><a href="#($req.url.path)#(item.id)/">#(item.name)</a></td>
+    <td class="t:left"><a href="#($req.url.path)#(item.id)/">#(item.url)</a></td>
+    <td class="t:center"><a href="#($req.url.path)#(item.id)/">#(item.priority)</a></td>
+    #inline("Admin/TableActionButtons")
+</tr>
     #endfor
 #enddefine
 #let(title = "Author links")
