--- a/Sources/App/Modules/Blog/Templates/Admin/Posts/List.html
+++ b/Sources/App/Modules/Blog/Templates/Admin/Posts/List.html
@@ -1,37 +1,46 @@
 #define(css):
-/*
-.table .tr, .table .th  {
+tr {
     grid-template-columns: 1fr 1fr;
 }
-
 @media (max-width: 599px) {
-    .tr .td:nth-of-type(1), .tr .td:nth-of-type(2), .th .td:nth-of-type(1), .th .td:nth-of-type(2) {
+    th:nth-of-type(1), th:nth-of-type(3), th:nth-of-type(4) {
+        display: none;
+    }
+    th:nth-of-type(2), td:nth-of-type(1), td:nth-of-type(2)  {
         grid-column: span 2;
     }
+    td:nth-of-type(2) {
+        padding-bottom: 16px;
+        margin-bottom: 16px;
+        border-bottom: 1px solid #e9e9e9;
+    }
+    @media (prefers-color-scheme: dark) {
+        td:nth-of-type(2) {
+            border-bottom: 1px solid #232323;
+        }
+    }
 }
-*/
 @media (min-width: 600px) {
-    .table .th, .table .tr {
-        grid-template-columns: 160px 1fr 64px 96px;
+    tr {
+        grid-template-columns: 128px 1fr 64px 96px;
     }
 }
 #enddefine
 #define(th):
     #var(link = nil)
-    <div class="td td:center">Image</div>
-    <div class="td td:left">#(link = ["key": "title", "default": true])#inline("Admin/SortLink")</div>
-    <div class="td td:center">Edit</div>
-    <div class="td td:center">Delete</div>
+    <th class="t:center">Image</th>
+    <th class="t:left m:horizontal:s">#(link = ["key": "title", "default": true])#inline("Admin/SortLink")</th>
+    #inline("Admin/TableActionLabels")
 #enddefine
 #define(tr):
     #for(item in list.items):
-<div class="tr">
-    <div class="td td:center">
+<tr>
+    <td class="t:center">
         <a href="#($req.url.path)#(item.id)/"><img class="w128 br:xs" src="#(item.imageKey.resolve())" alt="#(item.title)"></a>
-    </div>
-    <div class="td td:left"><a href="#($req.url.path)#(item.id)/">#(item.title)</a></div>
-    #inline("Admin/Actions")
-</div>
+    </td>
+    <td class="t:left m:horizontal:s"><a href="#($req.url.path)#(item.id)/">#(item.title)</a></td>
+    #inline("Admin/TableActionButtons")
+</tr>
     #endfor
 #enddefine
 #let(title = "Posts")
