--- a/Sources/App/Modules/Frontend/Templates/Admin/Metadatas/Edit.html
+++ b/Sources/App/Modules/Frontend/Templates/Admin/Metadatas/Edit.html
@@ -38,7 +38,7 @@
     #(field = ["id": "excerpt", "size": "small", "data": edit.excerpt])
     #inline("Admin/Fields/Textarea")
 
-    #(field = ["id": "image", "data": edit.image])
+    #(field = ["id": "image", "class": "large", "data": edit.image])
     #inline("Admin/Fields/File")
 
     #(field = ["id": "canonicalUrl", "label": "Canonical URL", "required": false, "data": edit.canonicalUrl])
