--- a/Sources/App/Modules/Static/Templates/Admin/Pages/List.html
+++ b/Sources/App/Modules/Static/Templates/Admin/Pages/List.html
@@ -1,21 +1,41 @@
 #define(css):
+tr {
+    grid-template-columns: 1fr 1fr;
+}
+@media (max-width: 599px) {
+    th:nth-of-type(2), th:nth-of-type(3) {
+        display: none;
+    }
+    th:nth-of-type(1), td:nth-of-type(1) {
+        grid-column: span 2;
+    }
+    td:nth-of-type(1) {
+        padding-bottom: 16px;
+        margin-bottom: 16px;
+        border-bottom: 1px solid #e9e9e9;
+    }
+    @media (prefers-color-scheme: dark) {
+        td:nth-of-type(1) {
+            border-bottom: 1px solid #232323;
+        }
+    }
+}
 @media (min-width: 600px) {
-    .table .th, .table .tr {
+    tr {
         grid-template-columns: 1fr 64px 96px;
     }
 }
 #enddefine
 #define(th):
-    <div class="td td:left m:horizontal:s">#let(link = ["key": "title"])#inline("Admin/SortLink")</div>
-    <div class="td td:center">Edit</div>
-    <div class="td td:center">Delete</div>
+    <th class="t:left m:horizontal:s">#let(link = ["key": "title"])#inline("Admin/SortLink")</th>
+    #inline("Admin/TableActionLabels")
 #enddefine
 #define(tr):
     #for(item in list.items):
-<div class="tr">
-    <div class="td td:left m:horizontal:s"><a href="#($req.url.path)#(item.id)/">#(item.title)</a></div>
-    #inline("Admin/Actions")
-</div>
+<tr>
+    <td class="t:left m:horizontal:s"><a href="#($req.url.path)#(item.id)/">#(item.title)</a></td>
+    #inline("Admin/TableActionButtons")
+</tr>
     #endfor
 #enddefine
 #let(title = "Pages")
