css + js injection support from leaf files

--- a/Sources/App/Modules/Admin/Templates/Index.html
+++ b/Sources/App/Modules/Admin/Templates/Index.html
@@ -22,9 +22,13 @@
 
     <link rel="shortcut icon" href="/images/icons/favicon.ico" type="image/x-icon">
         
-    <style>
+    <style type="text/css">
         #evaluate(css ?? "")
     </style>
+
+    <script type="text/javascript">
+        #evaluate(js ?? "")
+    </script>
 </head>
 
 <body class="m:zero">
