Leaf Hooks & dynamic admin menu

--- a/Sources/App/Modules/Admin/Templates/Home.html
+++ b/Sources/App/Modules/Admin/Templates/Home.html
@@ -10,51 +10,18 @@
     </header>
 
     <div class="g3 g:gap:l center">
+        #let(menus = HookAll("admin-menu"))
+        #for(menu in menus):
         <div class="g:col1 bg2 p:l br:s border1">
-            <span>#svg("book", class: "block w64")</span>
-            <h3>Blog</h3>
+            <span>#svg(menu.icon, class: "block w64")</span>
+            <h3>#(menu.name)</h3>
             <ul class="lst:none p:zero">
-                <li><a href="/admin/blog/posts/">Posts</a></li>
-                <li><a href="/admin/blog/categories/">Categories</a></li>
-                <li><a href="/admin/blog/authors/">Authors</a></li>
+            #for(item in menu.items):
+                <li><a href="#(item.url)">#(item.label)</a></li>
+            #endfor
             </ul>
         </div>
-        <div class="g:col1 bg2 p:l br:s border1">
-            <span>#svg("file-text", class: "block w64")</span>
-            <h3>Static</h3>
-            <ul class="lst:none p:zero">
-                <li><a href="/admin/static/pages/">Pages</a></li>
-            </ul>
-        </div>
-        <div class="g:col1 bg2 p:l br:s border1">
-            <span>#svg("arrow-right", class: "block w64")</span>
-            <h3>Redirect</h3>
-            <ul class="lst:none p:zero">
-                <li><a href="/admin/redirect/redirects/">Redirects</a></li>
-            </ul>
-        </div>
-        <div class="g:col1 bg2 p:l br:s border1">
-            <span>#svg("layout", class: "block w64")</span>
-            <h3>Frontend</h3>
-            <ul class="lst:none p:zero">
-                <li><a href="/admin/frontend/metadatas/">Metadatas</a></li>
-            </ul>
-        </div>
-        <div class="g:col1 bg2 p:l br:s border1">
-            <span>#svg("settings", class: "block w64")</span>
-            <h3>System</h3>
-            <ul class="lst:none p:zero">
-                <li><a href="/admin/system/variables/">Variables</a></li>
-            </ul>
-        </div>
-        <div class="g:col1 bg2 p:l br:s border1">
-            <span>#svg("user", class: "block w64")</span>
-            <h3>User</h3>
-            <ul class="lst:none p:zero">
-                <li><a href="/admin/user/users/">Users</a></li>
-            </ul>
-        </div>
-        
+        #endfor        
     </div>
 </div>
 
