--- a/Sources/App/Modules/System/Templates/Install/Finish.html
+++ b/Sources/App/Modules/System/Templates/Install/Finish.html
@@ -2,7 +2,7 @@
 <div class="wrapper w-full m-l">
     
     <section class="center m:vh:l">
-        <span class="h1">🦤</span>
+        <span class="h1">🪶</span>
         <h1>Setup completed</h1>
         <p>Thank you for choosing Feather CMS, your site is ready to use. We've created some sample content for you.</p>
         <a href="/">Let's get started →</a>
