--- a/Sources/App/Modules/Blog/Templates/Admin/Links/Edit.html
+++ b/Sources/App/Modules/Blog/Templates/Admin/Links/Edit.html
@@ -1,4 +1,4 @@
-#define(toolbarButtons):
+#define(toolbarRight):
 <li><a href="/admin/blog/authors/#Request(parameter: "id")">#svg("user")</a></li>
 <li><a href="/admin/blog/authors/#Request(parameter: "id")/links">#svg("link")</a></li>
 #enddefine
