--- a/Sources/App/Modules/Menu/Templates/Admin/Menus/List.html
+++ b/Sources/App/Modules/Menu/Templates/Admin/Menus/List.html
@@ -3,7 +3,7 @@ tr {
     grid-template-columns: 1fr 1fr;
 }
 @media (max-width: 599px) {
-    th:nth-of-type(4), th:nth-of-type(5) {
+    th:nth-of-type(1), th:nth-of-type(4), th:nth-of-type(5) {
         display: none;
     }
     th:nth-of-type(1), th:nth-of-type(2), th:nth-of-type(3), td:nth-of-type(1), td:nth-of-type(2), td:nth-of-type(3)  {
@@ -22,23 +22,24 @@ tr {
 }
 @media (min-width: 600px) {
     tr {
-        grid-template-columns: 1fr 1fr 1fr 64px 96px;
+        grid-template-columns: 64px 1fr 1fr 64px 96px;
     }
 }
 #enddefine
 #define(th):
     #var(link = nil)
-    <th class="t:left m:horizontal:s">#(link = ["key": "handle", "default": true])#inline("Admin/SortLink")</th>
-    <th class="t:left">#(link = ["key": "name"])#inline("Admin/SortLink")</th>
-    <th class="t:left">#(link = ["key": "icon"])#inline("Admin/SortLink")</th>
+    <th class="t:center">Icon</th>
+    <th class="t:left m:horizontal:s">#(link = ["key": "name", "default": true])#inline("Admin/SortLink")</th>
+    <th class="t:left">#(link = ["key": "handle"])#inline("Admin/SortLink")</th>
     #inline("Admin/TableActionLabels")
 #enddefine
 #define(tr):
     #for(item in list.items):
 <tr>
-    <td class="t:left m:horizontal:s"><a href="#($req.url.path)#(item.id)/">#(item.handle)</a></td>
-    <td class="t:left"><a href="#($req.url.path)#(item.id)/">#(item.name)</a></td>
-    <td class="t:left"><a href="#($req.url.path)#(item.id)/">#(item.icon)</a></td>
+    <td class="t:center">#svg(item.icon)</a></td>
+    <td class="t:left m:horizontal:s"><a href="#($req.url.path)#(item.id)/">#(item.name)</a></td>
+    <td class="t:left"><a href="#($req.url.path)#(item.id)/">#(item.handle)</a></td>
+    
     #inline("Admin/TableActionButtons")
 </tr>
     #endfor
