--- a/Sources/App/Modules/Sponsor/Templates/Box.html
+++ b/Sources/App/Modules/Sponsor/Templates/Box.html
@@ -1,11 +1,11 @@
-#if(systemVariable("sponsor.isEnabled") == "true"):
+#if($vars["sponsor.isEnabled"] == "true"):
 <section>
-    <div class="sponsor">
-        <img src="#systemVariable("sponsor.image.url")" alt="#systemVariable("sponsor.image.title")">
-        <h3>#systemVariable("sponsor.title")</h3>
-        <p>#systemVariable("sponsor.description")</p>
-        <a class="cta" href="#systemVariable("sponsor.button.url")" target="_blank">#systemVariable("sponsor.button.title")</a>
-        <a class="link" href="#systemVariable("sponsor.more.url")">#systemVariable("sponsor.more.title")</a>
+    <div>
+        <img src="#($vars["sponsor.image.url"])" alt="#($vars["sponsor.image.alt"])">
+        <h3>#($vars["sponsor.title"])</h3>
+        <p>#($vars["sponsor.description"])</p>
+        <a class="cta" href="#($vars["sponsor.button.url"])" target="_blank">#($vars["sponsor.button.title"])</a>
+        <a class="link" href="#($vars["sponsor.more.url"])">#($vars["sponsor.more.title"])</a>
     </div>
 </section>
 #endif
