--- a/Sources/App/Modules/Blog/Templates/Frontend/Author.html
+++ b/Sources/App/Modules/Blog/Templates/Frontend/Author.html
@@ -1,6 +1,8 @@
 #let(head = [
     "title": author.name,
-    "description": author.bio
+    "description": author.bio,
+    "css": metadata.css,
+    "js": metadata.js
 ])
 #define(body):
 
