--- a/Sources/App/Modules/Blog/Templates/Frontend/Category.html
+++ b/Sources/App/Modules/Blog/Templates/Frontend/Category.html
@@ -1,6 +1,8 @@
 #let(head = [
     "title": category.title,
-    "description": category.excerpt
+    "description": category.excerpt,
+    "css": metadata.css,
+    "js": metadata.js
 ])
 #define(body):
 
