--- a/Sources/App/Modules/Blog/Templates/Frontend/Post.html
+++ b/Sources/App/Modules/Blog/Templates/Frontend/Post.html
@@ -1,6 +1,8 @@
 #let(head = [
     "title": post.title,
-    "description": post.excerpt
+    "description": post.excerpt,
+    "css": post.metadata.css,
+    "js": post.metadata.js
 ])
 #define(body):
 
