--- a/Sources/App/Modules/System/Templates/Admin/Variables/Edit.html
+++ b/Sources/App/Modules/System/Templates/Admin/Variables/Edit.html
@@ -4,8 +4,8 @@
     #(field = ["id": "key", "required": true, "data": edit.key])
     #inline("Admin/Fields/Text")
 
-    #(field = ["id": "value", "required": true, "data": edit.value])
-    #inline("Admin/Fields/Text")
+    #(field = ["id": "value", "size": "small", "data": edit.value])
+    #inline("Admin/Fields/Textarea")
 
     #(field = ["id": "notes", "size": "small", "data": edit.notes])
     #inline("Admin/Fields/Textarea")
