fixed list order & sort issues

--- a/Sources/App/Modules/Admin/Templates/SortLink.html
+++ b/Sources/App/Modules/Admin/Templates/SortLink.html
@@ -1,1 +1,1 @@
-<a href="#Sort(query: link.key)">#(link.label ?? link.key.capitalized()) #Sort(indicator: link.key, default: (link.default ?? false))</a>
+<a href="#SortQuery(for: link.key, default: (link.default ?? false))">#(link.label ?? link.key.capitalized()) #SortIndicator(for: link.key, default: (link.default ?? false))</a>
