--- a/Sources/App/Modules/Blog/Templates/Admin/Categories/Edit.html
+++ b/Sources/App/Modules/Blog/Templates/Admin/Categories/Edit.html
@@ -16,6 +16,9 @@
     #(field = ["id": "excerpt", "size": "small", "data": fields.excerpt])
     #inline("Admin/Fields/Textarea")
 
+    #(field = ["id": "color", "more": "e.g #cafe00", "data": fields.color])
+    #inline("Admin/Fields/Text")
+
     #(field = ["id": "priority", "required": true, "data": fields.priority])
     #inline("Admin/Fields/Text")
 #enddefine
