--- a/Sources/App/Modules/Blog/Templates/Frontend/SinglePost.html
+++ b/Sources/App/Modules/Blog/Templates/Frontend/SinglePost.html
@@ -6,7 +6,7 @@
         </div>
         <div>
             <p>
-                <span class="underline">#(post.category.title ?? category.title ?? "")</span>
+                <span class="underline"#if(post.category.color != nil || category.color != nil): style="border-color: #(post.category.color ?? category.color ?? "");"#endif>#(post.category.title ?? category.title ?? "")</span>
                     &middot;
                 <time datetime="#Date(timeStamp: post.metadata.date, localizedFormat: "y/MM/dd")">
                 #Date(timeStamp: post.metadata.date, localizedFormat: "y/MM/dd")
